jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: jenkins-ui
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: jenkins-agent
      port: 50000
      protocol: TCP
